Tue Mar 24 17:34:01 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* README.ja.md: should be chunibyo.

Tue Mar 24 17:30:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/-test-/file/fs.c (get_fsname): return filesystem name by
	  statfs/statvfs.  [ruby-core:68624] [Bug #10998]

Tue Mar 24 16:46:02 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/redmine-backporter.rb: now doesn't required spaces just after
	  `!`.

Mon Mar 23 23:18:27 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (dir_close): don't raise on dobule close for consistent to
	  IO#close.  [Feature #10950]

Mon Mar 23 21:22:07 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/file.c (rb_readlink): move from file.c for better buffer
	  allocation and the result encoding.

	* win32/win32.c (wreadlink, rb_w32_ureadlink): implement readlink().

Mon Mar 23 14:40:45 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (winnt_stat): stat with following symbolic links.

	* win32/win32.c (winnt_lstat): rename old winnt_stat, which does
	  not follow symbolic links.

Mon Mar 23 01:44:35 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* marshal.c (r_symreal): register symbol names as strings first so
	  that r_symlink always returns valid names.
	  [ruby-core:68587] [Bug #10991]

	* marshal.c (r_ivar, r_object0): now need to intern symbol names.

	* marshal.c (r_object0): compare with symbol names.

Sun Mar 22 22:07:40 2015  Kouhei Sutou  <kou@cozmixng.org>

	* doc/etc.rd.ja: Fix wrong coding for Emacs.

Sun Mar 22 09:53:15 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/make-snapshot (package): add default CONFIGURE name to
	  follow r50039.

	* tool/make-snapshot (package): substitute configuration variables
	  in Makefile.in instead of passing by the command line, and make
	  temporary Makefile instead of a pipe.

Sun Mar 22 08:09:47 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (ext/ripper/ripper.c, ext/rbconfig/sizeof/sizes.c):